--- a/GE.WebUI/Web.Release.config
+++ b/GE.WebUI/Web.Release.config
@@ -18,6 +18,7 @@
     <trace enabled="false" xdt:Transform="Insert"/>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <httpRuntime enableVersionHeader="false" xdt:Transform="Replace"/>
+    <customErrors ></customErrors>
     <!--
       In the example below, the "Replace" transform will replace the entire 
       <customErrors> section of your web.config file.
@@ -39,9 +40,8 @@
         <remove name="X-AspNetMvc-Version"/>
       </customHeaders>
     </httpProtocol>
-    <httpErrors errorMode="Custom" existingResponse="Replace" xdt:Transform="Insert">
-      <remove statusCode="404" />
-      <remove statusCode="500" />
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="Replace" xdt:Transform="Insert">
+      <clear />
       <error statusCode="404" responseMode="ExecuteURL" path="/error/notfound" />
       <error statusCode="500" responseMode="ExecuteURL" path="/error/servererror" />
     </httpErrors>
