--- a/GE.WebUI/Web.config
+++ b/GE.WebUI/Web.config
@@ -32,19 +32,15 @@
     <!--recaptcha-->
     <add key="SiteSettingsGoogleRecaptchaSiteKey" value="6LfPXSYTAAAAALNd4uO0Vp8qQX8rmha7B9grIVFh" />
     <add key="SiteSettingsGoogleRecaptchaSecretKey" value="6LfPXSYTAAAAAEIjaztA4OlM42MbCPA3Ieanll0W" />
+    <!--affiliate-->
+    <add key="AffiliateCookieName" value="AffiliateCookies"/>
+    <add key="AffiliateQueryParName" value="ak"/>
   </appSettings>
-  <!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.6" />
-      </system.Web>
-  -->
+  
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
-    <customErrors mode="Off" />
+    <customErrors mode="Off"></customErrors>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
