--- a/GE.WebUI/Areas/Admin/Views/web.config
+++ b/GE.WebUI/Areas/Admin/Views/web.config
@@ -10,18 +10,14 @@
 
   <system.web.webPages.razor>
     <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-    <pages pageBaseType="SX.WebCore.MvcWebViewPage.SxWebViewPage">
+    <pages pageBaseType="System.Web.Mvc.WebViewPage">
       <namespaces>
         <add namespace="System.Web.Mvc" />
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <!---->
-        <add namespace="GE.WebUI.ViewModels" />
-        <add namespace="GE.WebUI.Models" />
-        <add namespace="GE.WebUI.ViewModels.Abstracts" />
-        <add namespace="SX.WebCore.HtmlHelpers"/>
-        <add namespace="SX.WebCore.ViewModels"/>
+        <add namespace="GE.WebUI" />
+        
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -36,12 +32,4 @@
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
-
-  <system.web>
-    <compilation>
-      <assemblies>
-        <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
-  </system.web>
 </configuration>
