--- a/GE.WebUI/Areas/Admin/Views/web.config
+++ b/GE.WebUI/Areas/Admin/Views/web.config
@@ -17,6 +17,9 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="GE.WebUI" />
+        <add namespace="GE.WebUI.ViewModels" />
+        <add namespace="SX.WebCore.ViewModels" />
+        <add namespace="SX.WebCore.HtmlHelpers" />
         
       </namespaces>
     </pages>
