--- a/GE.WebUI/Areas/Admin/Views/web.config
+++ b/GE.WebUI/Areas/Admin/Views/web.config
@@ -16,7 +16,9 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="SX.WebCore" />
         <add namespace="GE.WebUI" />
+        <add namespace="GE.WebUI.Models" />
         <add namespace="GE.WebUI.ViewModels" />
         <add namespace="SX.WebCore.ViewModels" />
         <add namespace="SX.WebCore.HtmlHelpers" />
