--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -206,6 +206,9 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\Controllers\AffiliateLinksController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AphorismsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\ArticlesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AuthorAphorismsController.cs" />
     <Compile Include="Areas\Admin\Controllers\BannedUrlsController.cs" />
     <Compile Include="Areas\Admin\Controllers\BannerGroupsController.cs" />
     <Compile Include="Areas\Admin\Controllers\BannersController.cs" />
@@ -215,12 +218,16 @@
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\LogsController.cs" />
     <Compile Include="Areas\Admin\Controllers\MaterialCategoriesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\MaterialTagsController.cs" />
     <Compile Include="Areas\Admin\Controllers\MenuItemsController.cs" />
     <Compile Include="Areas\Admin\Controllers\NetsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\NewsController.cs" />
+    <Compile Include="Areas\Admin\Controllers\PictureLinksController.cs" />
     <Compile Include="Areas\Admin\Controllers\PicturesController.cs" />
     <Compile Include="Areas\Admin\Controllers\RedirectsController.cs" />
     <Compile Include="Areas\Admin\Controllers\RequestsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SeoController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SeoKeywordsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SeoTagsController.cs" />
     <Compile Include="Areas\Admin\Controllers\ShareButtonsController.cs" />
     <Compile Include="Areas\Admin\Controllers\SiteNetsController.cs" />
@@ -230,6 +237,7 @@
     <Compile Include="Areas\Admin\Controllers\UserRolesController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\Admin\Controllers\ValutesController.cs" />
+    <Compile Include="Areas\Admin\Controllers\VideoLinksController.cs" />
     <Compile Include="Areas\Admin\Controllers\VideosController.cs" />
     <Compile Include="Areas\Admin\Controllers\SeoWordCounterController.cs" />
     <Compile Include="Controllers\AphorismController.cs" />
@@ -331,6 +339,25 @@
     <Content Include="Areas\Admin\Views\Games\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Games\Index.cshtml" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTests\_FindGridView.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTests\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTests\_Matrix.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTests\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTests\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTestSubjects\_Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTestSubjects\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTestQuestions\_Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\SiteTestQuestions\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\AuthorAphorisms\_FindGridView.cshtml" />
+    <Content Include="Areas\Admin\Views\AuthorAphorisms\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\AuthorAphorisms\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\AuthorAphorisms\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Aphorisms\_GridView.cshtml" />
+    <Content Include="Areas\Admin\Views\Aphorisms\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Aphorisms\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Articles\EditorTemplates\VMArticle.cshtml" />
+    <Content Include="Areas\Admin\Views\Shared\_GameLookupGrid.cshtml" />
+    <Content Include="Areas\Admin\Views\News\EditorTemplates\VMNews.cshtml" />
     <None Include="Properties\PublishProfiles\PROD.pubxml" />
     <Content Include="packages.config" />
     <Content Include="Scripts\currency-provider.js" />
