--- a/GE.WebUI/Views/web.config
+++ b/GE.WebUI/Views/web.config
@@ -22,6 +22,7 @@
         <add namespace="GE.WebUI.ViewModels.Abstracts" />
         <add namespace="SX.WebCore.HtmlHelpers"/>
         <add namespace="SX.WebCore.ViewModels"/>
+        <add namespace="SX.WebCore.DbModels"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
