--- a/GE.WebUI/Scripts/ts/sxshare/tsconfig.json
+++ b/GE.WebUI/Scripts/ts/sxshare/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "removeComments": true,
+    "removeComments": false,
     "target": "es5",
     "outFile": "../../sxshare.js"
   },
