--- a/GE.WebUI/GE.WebUI.csproj
+++ b/GE.WebUI/GE.WebUI.csproj
@@ -263,6 +263,7 @@
     <Compile Include="Controllers\ForAuthorsController.cs" />
     <Compile Include="Controllers\HumorController.cs" />
     <Compile Include="Controllers\MaterialCategoriesController.cs" />
+    <Compile Include="Controllers\NetMaterialsController.cs" />
     <Compile Include="Controllers\RatingController.cs" />
     <Compile Include="Controllers\SiteQuestionsController.cs" />
     <Compile Include="Controllers\SiteTestsController.cs" />
@@ -497,6 +498,7 @@
     <Content Include="Views\Articles\_Last.cshtml" />
     <Content Include="Views\ForAuthors\Index.cshtml" />
     <None Include="Properties\PublishProfiles\RELEASE.pubxml" />
+    <Content Include="Views\NetMaterials\Popular.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
